<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.details.ui.view.DetailsFragment" >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/detail_page_movie_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_movie_height"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/spiderman_nowayhome"
                />

            <ScrollView
                app:layout_constraintTop_toBottomOf="@id/detail_page_movie_image"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_page_movie_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="Spiderman No Way Home"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAppearance="@style/Movies.H4"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="@id/guideline_left"
                        app:layout_constraintEnd_toStartOf="@id/detail_page_add_mylist_button"
                        tools:layout_editor_absoluteY="4dp" />

                    <ImageButton
                        android:id="@+id/detail_page_add_mylist_button"
                        android:background="@color/white"
                        android:src="@drawable/ic_mylist"
                        android:layout_width="@dimen/iconSizeLarge"
                        android:layout_height="@dimen/iconSizeLarge"
                        app:layout_constraintEnd_toStartOf="@id/detail_page_share_button"
                        app:tint="@color/dark" />

                    <ImageButton
                        android:id="@+id/detail_page_share_button"
                        android:background="@color/white"
                        android:src="@drawable/ic_share"
                        android:layout_width="@dimen/iconSizeLarge"
                        android:layout_height="@dimen/iconSizeLarge"
                        app:tint = "@color/dark"
                        app:layout_constraintEnd_toStartOf="@id/guideline_right"
                        />

                    <ImageView
                        android:id="@+id/detail_page_star_icon"
                        android:src="@drawable/ic_star_rate"
                        android:scaleType="center"
                        android:layout_width="@dimen/iconSizeMedium"
                        android:layout_height="@dimen/iconSizeMedium"
                        android:layout_marginTop="@dimen/medium_margin"
                        app:layout_constraintStart_toStartOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_movie_name"
                        app:tint="@color/dark" />


                    <TextView
                        android:id="@+id/detail_page_movie_score"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/iconSizeMedium"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAppearance="@style/Movies.S2"
                        android:text="9.8"
                        android:textColor="@color/dark"
                        app:layout_constraintStart_toEndOf="@id/detail_page_star_icon"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_movie_name" />

                    <ImageView
                        android:id="@+id/detail_page_right_icon"
                        android:src="@drawable/ic_arrow_right"
                        android:scaleType="center"
                        android:layout_width="@dimen/iconSizeMedium"
                        android:layout_height="@dimen/iconSizeMedium"
                        android:layout_marginTop="@dimen/medium_margin"
                        app:layout_constraintStart_toEndOf="@id/detail_page_movie_score"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_movie_name"
                        app:tint="@color/dark" />

                    <TextView
                        android:id="@+id/detail_page_movie_realese_date"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/iconSizeMedium"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/Movies.S2"
                        android:gravity="center"
                        android:text="2022"
                        app:layout_constraintStart_toEndOf="@id/detail_page_right_icon"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_movie_name" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/detail_page_play_button"
                        android:layout_width="@dimen/banner_movie_button_width"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_play_circle_24"
                        android:drawableTint="@color/white"
                        android:text="@string/play_button"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textAppearance="@style/Movies.Button2"
                        android:tint="@color/primary"
                        app:cornerRadius="@dimen/large_margin"
                        android:backgroundTint="@color/dark"
                        android:layout_marginLeft="@dimen/medium_margin"
                        app:layout_constraintStart_toEndOf="@id/detail_page_movie_realese_date"
                        app:layout_constraintEnd_toStartOf="@id/detail_page_download_button"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_movie_name"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/detail_page_download_button"
                        android:layout_width="@dimen/banner_movie_button_width"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_download"
                        android:drawableTint="@color/dark"
                        android:text="@string/download_button"
                        android:textAllCaps="false"
                        android:textColor="@color/dark"
                        android:textAppearance="@style/Movies.Button2"
                        android:tint="@color/primary"
                        app:cornerRadius="@dimen/large_margin"
                        app:strokeColor="@color/dark"
                        app:strokeWidth="@dimen/extra_small_margin"
                        android:backgroundTint="@color/white"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_movie_name"
                        app:layout_constraintEnd_toEndOf="@id/guideline_right"
                        />

                    <TextView
                        android:id="@+id/detail_page_genre_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        app:layout_constraintStart_toStartOf="@id/guideline_left"
                        app:layout_constraintTop_toBottomOf="@+id/detail_page_star_icon"
                        android:text="@string/genre"
                        android:textAppearance="@style/Movies.B2"
                        />

                    <TextView
                        android:id="@+id/detail_page_movie_genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        app:layout_constraintStart_toEndOf="@id/detail_page_genre_text"
                        app:layout_constraintTop_toBottomOf="@+id/detail_page_star_icon"
                        app:layout_constraintEnd_toStartOf="@id/guideline_right"
                        android:text="Action,Horror,Comedy"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAppearance="@style/Movies.B2"
                        />

                    <TextView
                        android:id="@+id/detail_page_movie_overview"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/detail_movie_overview_height"
                        android:ellipsize="end"
                        android:text="Action,Horror,Comedy"
                        android:textAppearance="@style/Movies.B2"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_genre_text"
                        app:layout_constraintEnd_toStartOf="@id/guideline_right"
                        app:layout_constraintStart_toStartOf="@id/guideline_left" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/detail_page_movie_cast_recycler_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_movie_overview"
                        app:layout_constraintStart_toStartOf="@id/guideline_left"
                        app:layout_constraintEnd_toStartOf="@id/guideline_right"
                        tools:listitem="@layout/detail_movie_cast_item"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/detail_page_tab_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:tabTextAppearance="@style/TabLayoutStyle"
                        app:tabSelectedTextColor="@color/dark"
                        app:tabIndicatorColor="@color/dark"
                        app:tabTextColor="#CE838383"
                        app:tabMode="fixed"
                        app:tabGravity="fill"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_movie_cast_recycler_view"
                        app:layout_constraintStart_toStartOf="@id/guideline_left"
                        app:layout_constraintEnd_toEndOf="@id/guideline_right"
                        >

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trailer" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_like_this" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/commnets" />
                    </com.google.android.material.tabs.TabLayout>

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/detail_page_view_pager"
                        android:layout_width="0dp"
                        android:layout_height="400dp"
                        app:layout_constraintStart_toStartOf="@id/guideline_left"
                        app:layout_constraintEnd_toEndOf="@id/guideline_right"
                        app:layout_constraintTop_toBottomOf="@id/detail_page_tab_layout"
                        />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="16dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="16dp" />



                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>



        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>